:lipstick: add files base on the directory

--- a/src/sass/abstracts/_functions.scss
+++ b/src/sass/abstracts/_functions.scss
@@ -1,3 +1,7 @@
+/* ------------------------------------------------------------
+This file contains all application-wide Sass functions.
+--------------------------------------------------------------*/
+
 @function asset($base, $type, $path) {
   @return url($base + $type + $path);
 }
