--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -1,7 +1,3 @@
 /* ------------------------------------------------------------
-This file contains all styles related to the base styles.
+This file contains all application-wide Sass mixins.
 --------------------------------------------------------------*/
-
-html {
-  box-sizing: border-box;
-}
