--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,7 +1,3 @@
 /* ------------------------------------------------------------
-This file contains all styles related to the base styles.
+This file contains all styles related to the typography.
 --------------------------------------------------------------*/
-
-html {
-  box-sizing: border-box;
-}
